cros: Fix bubble menu not showing up on screen when too tall

Previously I did not consider that menus would be very tall. I was
unaware that shift-clicking the chrome icon would show a potentially
very long list of all active tabs. This resulted in a menu that would
not show up (bottom shelf) or show up clipped (side shelf).

Added some unit tests for the tall menu case, and also for the case
where the anchor bounds size is 0 (for example, a click).

Bug: 913278
Change-Id: I460db943df268f7b1534bbdcffca9d5b96e750ec
Reviewed-on: https://chromium-review.googlesource.com/c/1428603
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#626219}
Former-commit-id: af67f6ebca291246ffd272cdf168feef1e023102